components/pages/gallery/Details.module.css
.container {
  background-color: #fff;
  border: 1px solid var(--admin-dark-blue);
  border-radius: 5px;
  padding: 1rem;
  display: flex;
  flex-direction: column;
  min-width: min(500px, calc(100vw - 1rem));
}

.container p {
  margin: 0.5rem 0;
}

.container li {
  margin-left: 1rem;
}

.image {
  width: 100%;
  height: auto;
  max-height: min(40vh, 400px);
  object-fit: contain;
}

.link { 
  text-decoration: underline;
  color: var(--admin-dark-blue);
  transition: all 400ms;
}

.link:hover {
  cursor: pointer;
  color: var(--admin-light-blue);
}

.button {
  background-color: var(--admin-light-blue);
  font-size: 1rem;
  text-transform: uppercase;
  color: #FFF;
  border: 1px solid var(--admin-dark-blue);
  border-radius: 5px;
  padding: 5px;
  margin-top: 0.5rem;
  transition: all 400ms;
}

.button:hover {
  cursor: pointer;
  background-color: var(--admin-lighter-blue);
}

